--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+body {
+  font-family: "Cabin", sans-serif;
+}
+
 img {
   margin-left: auto;
   margin-right: auto;
@@ -8,6 +12,16 @@ img {
   height: 450px;
   width: 450px;
   margin-top: 6%;
+}
+
+#logo-two{
+  height: 450px;
+  width: 450px;
+  margin-top: -100px;
+}
+
+span {
+  color: #38b6ff;
 }
 
 #twitter {
@@ -45,10 +59,74 @@ img {
   margin-top: 110px;
 }
 
-div {
+#socials {
   display: flex;
   flex-direction: row;
   justify-content: center;
+}
+
+.nav-m {
+  margin-left: auto;
+  margin-right: auto;
+  text-decoration: none;
+  color: black;
+  margin: 10px;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.social-m {
+  margin: 5px;
+}
+
+.nav-m:hover {
+  color: #38b6ff;
+}
+
+ul {
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: -100px;
+}
+
+#go-back {
+  text-align: center;
+}
+
+.mieso {
+  color: black;
+}
+
+#about-us {
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+  text-align: center;
+  font-size: 25px;
+  margin-top: -100px;
+}
+
+#naol {
+  margin-left: auto;
+  margin-right: auto;
+  width: 45%;
+  text-align: center;
+  font-size: 20px;
+}
+
+#kyeen {
+  margin-left: auto;
+  margin-right: auto;
+  width: 45%;
+  text-align: center;
+  font-size: 20px;
+}
+
+.photo {
+  height: 250px;
+  width: 250px;
 }
 
 @media only screen and (max-width: 600px) {
@@ -77,4 +155,43 @@ div {
   #facebook {
     margin-top: 100px;
   }
+
+  #logo-two {
+    width: 360px;
+    height: 360px;;
+  }
+#about-us {
+  width: 90%;
+  font-size: 25px;
+}
+
+#naol {
+  width: 90%;
+  font-size: 20px;
+}
+
+#kyeen {
+  width: 90%;
+  font-size: 20px;
+}
+
+.photo {
+  height: 250px;
+  width: 250px;
+}
+
+.nav-m {
+  font-size: 28px;
+  margin-left: auto;
+  margin-right: auto;
+  margin: 10px;
+}
+
+ul {
+  margin-top: -70px;
+}
+
+.position {
+  font-size: 19px;
+}
 }
