--- a/css/styles.css
+++ b/css/styles.css
@@ -124,6 +124,14 @@ ul {
   font-size: 20px;
 }
 
+#udai {
+  margin-left: auto;
+  margin-right: auto;
+  width: 45%;
+  text-align: center;
+  font-size: 20px;
+}
+
 .photo {
   height: 250px;
   width: 250px;
@@ -171,6 +179,11 @@ ul {
 }
 
 #kyeen {
+  width: 90%;
+  font-size: 20px;
+}
+
+#udai {
   width: 90%;
   font-size: 20px;
 }
