--- a/css/styles.css
+++ b/css/styles.css
@@ -139,6 +139,13 @@ ul {
   color: #38b6ff;
 }
 
+#linkedin {
+  width: 40px;
+  height: 40px;
+  margin-bottom: 20px;
+  margin-top: 5px;
+}
+
 #about-us {
   margin-left: auto;
   margin-right: auto;
